deps/chakrashim/core/test/Basics/keyword.baseline
SyntaxError: Expected identifier
	at code (keyword.js:6:6)
