deps/chakrashim/core/test/Basics/keyword.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------



function f()
{
var blah = {};
blah.\u0069f = 1;
}


f();
